support design library, added toolbar and fab

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     // UI
     compile 'com.afollestad:material-dialogs:0.7.6.0'
+    compile 'com.android.support:design:22.2.0'
     //Database realm
     compile 'io.realm:realm-android:0.81.1'
     // Debugging:
